# serializer version: 1
# name: TestTreeSurvival.test_tree_model_custom_settings[event-event_type == 'CONSULTATION']
  SurvivalResult(survival_array=array([( True, 344.), ( True,  27.), ( True, 178.), ( True, 179.),
         ( True,  59.), ( True,  74.)],
        dtype=[('observed', '?'), ('duration', '<f8')]), sequence_ids=[1, 3, 4, 5, 6, 7], endpoint_dates=1   2023-12-11
  2          NaT
  3   2023-01-28
  4   2023-06-28
  5   2023-06-29
  6   2023-03-01
  7   2023-03-16
  dtype: datetime64[ns], t_zeros=1   2023-01-01
  2   2023-01-01
  3   2023-01-01
  4   2023-01-01
  5   2023-01-01
  6   2023-01-01
  7   2023-01-01
  dtype: datetime64[ns], durations=1    344.0
  3     27.0
  4    178.0
  5    179.0
  6     59.0
  7     74.0
  dtype: float64, observation_data=       start        end  observed
  1 2023-01-01 2023-12-11      True
  3 2023-01-01 2023-01-28      True
  4 2023-01-01 2023-06-28      True
  5 2023-01-01 2023-06-29      True
  6 2023-01-01 2023-03-01      True
  7 2023-01-01 2023-03-16      True)
# ---
# name: TestTreeSurvival.test_tree_model_custom_settings[interval-medication == 'ANTIBIOTIC']
  SurvivalResult(survival_array=array([( True,  19.), ( True,   4.), ( True, 104.), ( True, 144.),
         ( True, 248.), ( True, 137.), ( True,  72.)],
        dtype=[('observed', '?'), ('duration', '<f8')]), sequence_ids=[1, 2, 3, 4, 5, 6, 7], endpoint_dates=1   2023-01-20
  2   2023-01-05
  3   2023-04-15
  4   2023-05-25
  5   2023-09-06
  6   2023-05-18
  7   2023-03-14
  dtype: datetime64[ns], t_zeros=1   2023-01-01
  2   2023-01-01
  3   2023-01-01
  4   2023-01-01
  5   2023-01-01
  6   2023-01-01
  7   2023-01-01
  dtype: datetime64[ns], durations=1     19.0
  2      4.0
  3    104.0
  4    144.0
  5    248.0
  6    137.0
  7     72.0
  dtype: float64, observation_data=       start        end  observed
  1 2023-01-01 2023-01-20      True
  2 2023-01-01 2023-01-05      True
  3 2023-01-01 2023-04-15      True
  4 2023-01-01 2023-05-25      True
  5 2023-01-01 2023-09-06      True
  6 2023-01-01 2023-05-18      True
  7 2023-01-01 2023-03-14      True)
# ---
# name: TestTreeSurvival.test_tree_model_fitting_and_structure[event-event_type == 'CONSULTATION']
  array([( True, 344.), ( True,  27.), ( True, 178.), ( True, 179.),
         ( True,  59.), ( True,  74.)],
        dtype=[('observed', '?'), ('duration', '<f8')])
# ---
# name: TestTreeSurvival.test_tree_model_fitting_and_structure[event-event_type == 'EXAM']
  array([( True,  20.), ( True,  53.), ( True, 230.), ( True, 206.),
         ( True,   1.), ( True, 127.), ( True, 337.)],
        dtype=[('observed', '?'), ('duration', '<f8')])
# ---
# name: TestTreeSurvival.test_tree_model_fitting_and_structure[interval-medication == 'ANTIBIOTIC']
  array([( True,  19.), ( True,   4.), ( True, 104.), ( True, 144.),
         ( True, 248.), ( True, 137.), ( True,  72.)],
        dtype=[('observed', '?'), ('duration', '<f8')])
# ---
# name: TestTreeSurvival.test_tree_model_fitting_and_structure[state-health_state == 'CHRONIC_MONITORING']
  array([( True, 349.), ( True,  94.), ( True,   0.), ( True, 349.)],
        dtype=[('observed', '?'), ('duration', '<f8')])
# ---
# name: TestTreeSurvival.test_tree_model_fitting_and_structure[state-health_state == 'CONVALESCENCE']
  array([( True,   0.), ( True, 158.), ( True,   0.), ( True, 347.)],
        dtype=[('observed', '?'), ('duration', '<f8')])
# ---
# name: TestTreeSurvival.test_tree_model_prediction_workflow[event-event_type == 'CONSULTATION']
  array([StepFunction(x=array([ 27.,  59.,  74., 178., 179., 344.]), y=array([0.66666667, 0.66666667, 0.33333333, 0.33333333, 0.        ,
                0.        ]), a=1.0, b=0.0)                                                                                              ,
         StepFunction(x=array([ 27.,  59.,  74., 178., 179., 344.]), y=array([1.        , 0.66666667, 0.66666667, 0.33333333, 0.33333333,
                0.        ]), a=1.0, b=0.0)                                                                                              ,
         StepFunction(x=array([ 27.,  59.,  74., 178., 179., 344.]), y=array([1.        , 0.66666667, 0.66666667, 0.33333333, 0.33333333,
                0.        ]), a=1.0, b=0.0)                                                                                              ],
        dtype=object)
# ---
# name: TestTreeSurvival.test_tree_model_prediction_workflow[interval-medication == 'ANTIBIOTIC']
  array([StepFunction(x=array([  4.,  19.,  72., 104., 137., 144., 248.]), y=array([0.75, 0.75, 0.5 , 0.25, 0.25, 0.25, 0.  ]), a=1.0, b=0.0),
         StepFunction(x=array([  4.,  19.,  72., 104., 137., 144., 248.]), y=array([1.        , 0.66666667, 0.66666667, 0.66666667, 0.33333333,
                0.        , 0.        ]), a=1.0, b=0.0)                                                                                        ,
         StepFunction(x=array([  4.,  19.,  72., 104., 137., 144., 248.]), y=array([1.        , 0.66666667, 0.66666667, 0.66666667, 0.33333333,
                0.        , 0.        ]), a=1.0, b=0.0)                                                                                        ],
        dtype=object)
# ---
# name: TestTreeSurvival.test_tree_model_prediction_workflow[state-condition == 'DIGESTIVE']
  array([StepFunction(x=array([  0., 198., 199.]), y=array([0.4, 0.2, 0. ]), a=1.0, b=0.0),
         StepFunction(x=array([  0., 198., 199.]), y=array([0.4, 0.2, 0. ]), a=1.0, b=0.0),
         StepFunction(x=array([  0., 198., 199.]), y=array([0.4, 0.2, 0. ]), a=1.0, b=0.0)],
        dtype=object)
# ---
# name: TestTreeSurvival.test_tree_survival_array_generation[event-event_type == 'CONSULTATION']
  SurvivalResult(survival_array=array([( True, 344.), ( True,  27.), ( True, 178.), ( True, 179.),
         ( True,  59.), ( True,  74.)],
        dtype=[('observed', '?'), ('duration', '<f8')]), sequence_ids=[1, 3, 4, 5, 6, 7], endpoint_dates=1   2023-12-11
  2          NaT
  3   2023-01-28
  4   2023-06-28
  5   2023-06-29
  6   2023-03-01
  7   2023-03-16
  dtype: datetime64[ns], t_zeros=1   2023-01-01
  2   2023-01-01
  3   2023-01-01
  4   2023-01-01
  5   2023-01-01
  6   2023-01-01
  7   2023-01-01
  dtype: datetime64[ns], durations=1    344.0
  3     27.0
  4    178.0
  5    179.0
  6     59.0
  7     74.0
  dtype: float64, observation_data=       start        end  observed
  1 2023-01-01 2023-12-11      True
  3 2023-01-01 2023-01-28      True
  4 2023-01-01 2023-06-28      True
  5 2023-01-01 2023-06-29      True
  6 2023-01-01 2023-03-01      True
  7 2023-01-01 2023-03-16      True)
# ---
# name: TestTreeSurvival.test_tree_survival_array_generation[event-event_type == 'EXAM']
  SurvivalResult(survival_array=array([( True,  20.), ( True,  53.), ( True, 230.), ( True, 206.),
         ( True,   1.), ( True, 127.), ( True, 337.)],
        dtype=[('observed', '?'), ('duration', '<f8')]), sequence_ids=[1, 2, 3, 4, 5, 6, 7], endpoint_dates=1   2023-01-21
  2   2023-02-23
  3   2023-08-19
  4   2023-07-26
  5   2023-01-02
  6   2023-05-08
  7   2023-12-04
  dtype: datetime64[ns], t_zeros=1   2023-01-01
  2   2023-01-01
  3   2023-01-01
  4   2023-01-01
  5   2023-01-01
  6   2023-01-01
  7   2023-01-01
  dtype: datetime64[ns], durations=1     20.0
  2     53.0
  3    230.0
  4    206.0
  5      1.0
  6    127.0
  7    337.0
  dtype: float64, observation_data=       start        end  observed
  1 2023-01-01 2023-01-21      True
  2 2023-01-01 2023-02-23      True
  3 2023-01-01 2023-08-19      True
  4 2023-01-01 2023-07-26      True
  5 2023-01-01 2023-01-02      True
  6 2023-01-01 2023-05-08      True
  7 2023-01-01 2023-12-04      True)
# ---
# name: TestTreeSurvival.test_tree_survival_array_generation[interval-medication == 'ANTIBIOTIC']
  SurvivalResult(survival_array=array([( True,  19.), ( True,   4.), ( True, 104.), ( True, 144.),
         ( True, 248.), ( True, 137.), ( True,  72.)],
        dtype=[('observed', '?'), ('duration', '<f8')]), sequence_ids=[1, 2, 3, 4, 5, 6, 7], endpoint_dates=1   2023-01-20
  2   2023-01-05
  3   2023-04-15
  4   2023-05-25
  5   2023-09-06
  6   2023-05-18
  7   2023-03-14
  dtype: datetime64[ns], t_zeros=1   2023-01-01
  2   2023-01-01
  3   2023-01-01
  4   2023-01-01
  5   2023-01-01
  6   2023-01-01
  7   2023-01-01
  dtype: datetime64[ns], durations=1     19.0
  2      4.0
  3    104.0
  4    144.0
  5    248.0
  6    137.0
  7     72.0
  dtype: float64, observation_data=       start        end  observed
  1 2023-01-01 2023-01-20      True
  2 2023-01-01 2023-01-05      True
  3 2023-01-01 2023-04-15      True
  4 2023-01-01 2023-05-25      True
  5 2023-01-01 2023-09-06      True
  6 2023-01-01 2023-05-18      True
  7 2023-01-01 2023-03-14      True)
# ---
# name: TestTreeSurvival.test_tree_survival_array_generation[state-health_state == 'CHRONIC_MONITORING']
  SurvivalResult(survival_array=array([( True, 349.), ( True,  94.), ( True,   0.), ( True, 349.)],
        dtype=[('observed', '?'), ('duration', '<f8')]), sequence_ids=[2, 3, 4, 5], endpoint_dates=1          NaT
  2   2023-12-16
  3   2023-04-05
  4   2023-01-01
  5   2023-12-16
  6          NaT
  7          NaT
  dtype: datetime64[ns], t_zeros=1   2023-01-01
  2   2023-01-01
  3   2023-01-01
  4   2023-01-01
  5   2023-01-01
  6   2023-01-01
  7   2023-01-01
  dtype: datetime64[ns], durations=2    349.0
  3     94.0
  4      0.0
  5    349.0
  dtype: float64, observation_data=       start        end  observed
  2 2023-01-01 2023-12-16      True
  3 2023-01-01 2023-04-05      True
  4 2023-01-01 2023-01-01      True
  5 2023-01-01 2023-12-16      True)
# ---
# name: TestTreeSurvival.test_tree_survival_array_generation[state-health_state == 'CONVALESCENCE']
  SurvivalResult(survival_array=array([( True,   0.), ( True, 158.), ( True,   0.), ( True, 347.)],
        dtype=[('observed', '?'), ('duration', '<f8')]), sequence_ids=[3, 4, 5, 6], endpoint_dates=1          NaT
  2          NaT
  3   2023-01-01
  4   2023-06-08
  5   2023-01-01
  6   2023-12-14
  7          NaT
  dtype: datetime64[ns], t_zeros=1   2023-01-01
  2   2023-01-01
  3   2023-01-01
  4   2023-01-01
  5   2023-01-01
  6   2023-01-01
  7   2023-01-01
  dtype: datetime64[ns], durations=3      0.0
  4    158.0
  5      0.0
  6    347.0
  dtype: float64, observation_data=       start        end  observed
  3 2023-01-01 2023-01-01      True
  4 2023-01-01 2023-06-08      True
  5 2023-01-01 2023-01-01      True
  6 2023-01-01 2023-12-14      True)
# ---
